2016-11-19  SilverNexus
	* CMakeLists.txt: Add check for unistd.h in configuration. MSVC does not have it.
	  Add check for io.h, too.
	* config.h.in: Add define for presence of unistd.h.
	  Add define for presence of io.h, too.
	* search.c: Add use of unistd check to ensure unistd.h is only included when present.
	  Add implementation of search_folder to use io.h for MSVC compilers.
	* search.h: Begin to implement MSVC directory traversal functionality.
	* main.c: Add allowance of io.h presence to call search_folder().

2016-11-18  SilverNexus
	* search.c: Add code to check for existence of S_ISLNK(m). It is not always available.
	  Fix improper handling of when to display error message.
	  Fix improper casting of pointer types.
	* CMakeLists.txt: Add check for S_ISLNK(m).
	  Expand compiler argument handling to include MinGW and Cygwin.
	  Add install target to build process.
	* config.h.in: Add config define for presence of S_ISLNK(m).
	* INSTALL: Updated to reflect use of new build system.
	* README: Updated to reflect loosening of requirements with struct dirent.
	* doc/fileperuser.man: Update to reflect version change.

-----------------------------------------------------------------------------------------
                                      Changes for 0.03
-----------------------------------------------------------------------------------------

2016-11-17  SilverNexus
	* search.c: Add conditional compilation to allow dirent using non-d_type-enabled variants.
	* CMakeLists.txt, configure.ac,
	  Makefile.am, doc/Makefile.am,
	  config.h.in: Implement CMake build system to improve cross-platform capabilities. Remove autotools build system.
	* fileperuser_search.c: Remove ugly hack to "improve" performance.
	* install_manpage.sh: Add a script to install manpages without autotools.

2016-09-22  SilverNexus
	* jump_table.c: Catch a performance refactor of while->do-while I missed last time.

2016-09-15  SilverNexus